loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:-31: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet1:-30: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Poucet1:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^